# sdofmv2

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  sdofmv2_environment.yml
.github/workflows/: publish.yml
configs/downstream/: finetune_f107_config_sdofmv1.yaml  finetune_f107_config_sdofmv2_AIA.yaml  finetune_f107_config_sdofmv2_HMI.yaml  finetune_missing_config_sdofmv2.yml  finetune_solarwind_config.yaml  reconstruct_missing_channel.yaml  solar_wind.mplstyle
configs/downstream/surya_missing/: surya_missing_config.yaml
configs/pretrain/: pretrain_mae_AIA.yaml  pretrain_mae_AIA_old.yaml  pretrain_mae_AIA_testrun.yaml  pretrain_mae_ALL.yaml  pretrain_mae_HMI.yaml
docs/source/: conf.py  getting_started.rst  index.rst  modules.rst  sdofmv2.core.rst  sdofmv2.rst  sdofmv2.tasks.f107.rst  sdofmv2.tasks.missing_data.rst  sdofmv2.tasks.rst  sdofmv2.tasks.solar_wind.rst  sdofmv2.utils.rst
notebooks/analysis/: visualize_AIA_PCA.ipynb  visualize_AIA_attention_maps.ipynb  visualize_HMI_PCA.ipynb  visualize_HMI_attention_maps.ipynb  visualize_sdofmv2_AIA_limbmask.ipynb  visualize_sdofmv2_AIA_masking.ipynb  visualize_sdofmv2_AIA_maskingv2.ipynb  visualize_sdofmv2_AIA_three_imgs.ipynb  visualize_sdofmv2_HMI_masking.ipynb
notebooks/downstream_apps/F10_7/: F10.7_SDOFMv2.ipynb
notebooks/downstream_apps/Missing_Data/: Missing_Data_sdofmv2.ipynb
scripts/: create_index_surya.py  download_sdomlv2.py  finetuning_solarwind.py  preprocess.py  pretrain.py  surya_reconstruction.py  test.py
src/sdofmv2/core/: __init__.py  attention_map.py  basemodule.py  datamodule.py  losses.py  mae3d.py  mae3d_old.py  mae_module.py  mae_module_old.py  pca_analysis.py  preprocessing.py  reconstruction.py
src/sdofmv2/datasets/: SDOML.py  __init__.py
src/sdofmv2/experiments/: pretrain.py
src/sdofmv2/models/: BaseModule.py  MAE.py  __init__.py  wrap_encoder.py
src/sdofmv2/models/downstream/: __init__.py  model.py  model_embed.py
src/sdofmv2/models/downstream/head/: __init__.py  head_networks.py
src/sdofmv2/models/downstream/loss/: __init__.py  focal_loss.py
src/sdofmv2/tasks/f107/: __init__.py  f107_datamodule.py  f107_module.py
src/sdofmv2/tasks/missing_data/: __init__.py  missing_data_module.py  necks.py  surya_reconstruction.py  wrap_encoder.py
src/sdofmv2/tasks/solar_wind/: __init__.py  datamodule.py  focal_loss.py  head_networks.py  metrics.py  model.py  visualization.py
src/sdofmv2/utils/: __init__.py  utils.py
tests/: test_datamodule.py  test_utils.py
